--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:jackwilkie78987@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;
-                  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;
-                  <a href="https://bsky.app/profile/jonbarron.bsky.social">Bluesky</a> &nbsp;/&nbsp;
+                  <a href="data/jackwilkie_cv.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="https://www.linkedin.com/in/jack-wilkie">LinkedIn</a> &nbsp;/&nbsp;
                   <a href="https://github.com/jonbarron/">Github</a>
                 </p>
               </td>
