--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <a href="mailto:jackwilkie78987@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/jackwilkie_cv.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/jack-wilkie">LinkedIn</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/jonbarron/">Github</a>
+                  <a href="https://github.com/jackwilkie/">Github</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
