--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Jack Wilkie
                 </p>
-                <p> I am PhD Research at the <a href="https://www.strath.ac.uk">University of Strathclyde</a>. I am researching the applications of machine learning to a range of cyber security appliactions such as network intrusino detection and malware classification.
+                <p> I am PhD Researcher at the <a href="https://www.strath.ac.uk">University of Strathclyde</a>. I am researching the applications of machine learning to a range of cybersecurity applications such as network intrusion detection and malware classification.
                 </p>
                 <p>
                   **talk about work here
