--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Jon Barron</title>
+    <title>Jack Wilkie</title>
 
     <meta name="author" content="Jack Wilkie">
     <meta name="viewport" content="width=device-width, initial-scale=1">
