--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/jackwilkie.png"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/jackwilkie.png" class="hoverZoomLink"></a>
+                <a href="images/jackwilkie.JPG"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/jackwilkie.JPG" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
