added accepted clan paper and github

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                       <em>Proceedings of the IEEE Conference on Cyber Security and Resilience (CSR)</em>, 2025
                       <br>
                       <a href="abstracts/clan.html" target="_blank">abstract</a> |
-                      <a href="https://ieeexplore.ieee.org/document/11129979" target="_blank">paper</a>
+                      <a href="https://ieeexplore.ieee.org/document/11129979" target="_blank">published paper</a> |
+                      <a href="papers/clan_main.pdf" target="_blank">accepted paper</a> |
+                      <a href="https://github.com/jackwilkie/CLAN" target="_blank">github</a>
                       <p>
                         Traditional contrastive self-supervised learning can be viewed as learning a mixture of distributions where training samples are centroids and their augmented views are distribution samples. This work presents a modification which allows the model to learn a single coherent distribution of network benign traffic in embedded space allowing for better performance and more efficient inference.
                       </p>
