--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                       <br>
                       <em>Springer Cybersecurity</em>, Accepted, In Press
                       <br>
-                      <a href="abstracts/oned_malware.html" target="_blank">abstract</a>
+                      <a href="abstracts/oned_malware.html" target="_blank">abstract</a> |
+                      <a href="papers/1d_malware_classfication.pdf" target="_blank">accepted paper</a>
                       <p>
                         Byteplot images are a widely used binary representation for applying computer vision techniques to malware classification. This work demonstrates that using 1D signal representations reduces information loss, resulting in improved classification performance. Additionally, a framework is proposed that adapts existing 2D image classifiers for use on 1D signal data, achieving state-of-the-art performance on the MalNet dataset.
                       </p>
