--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <p style="text-align:center">
                   <a href="mailto:jackwilkie78987@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/jackwilkie_cv.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="https://scholar.google.co.uk/citations?user=yptJEKAAAAAJ&hl=en&oi=ao">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/jack-wilkie">LinkedIn</a> &nbsp;/&nbsp;
                   <a href="https://github.com/jackwilkie/">Github</a>
                 </p>
